[package]
version = "0.1.0"
name = "isds-bitcoin-prototype"
authors = ["Martin Florian <martin.florian@hu-berlin.de>"]
description = "Interactive Simulation of Distributed Systems; Prototype for Bitcoin Consensus"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
seed = "0.8"
rand = "0.8"
ordered-float = "2.0"
hecs = "0.6"
delaunator = "0.2.1"
dyn-clone = "1.0.4"
palette = "0.6.0"
hex = "0.4.3"
rand_distr = "0.4.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
