[package]
version = "0.3.0"
name = "isds"
authors = ["Martin Florian <martin.florian@hu-berlin.de>"]
description = "Interactive Simulation of Distributed Systems; Prototype for Bitcoin Consensus"
categories = ["simulation", "visualization"]
license = "MIT"
readme = "./README.md"
edition = "2021"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
yew = "0.19"
rand = "0.8"
ordered-float = "2.0"
hecs = "0.7"
delaunator = "1.0"
dyn-clone = "1.0.4"
palette = "0.6.0"
hex = "0.4.3"
rand_distr = "0.4.1"
gloo = "0.5"
getrandom = { version = "0.2", features = ["js"] }
readonly = "0.2.0"
web-sys = { version = "0.3.55", features = ["HtmlSelectElement"] }
